resource/translators/Parser.js
BetterBibTeXParser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = function(entries) { return bibtex; },
        peg$c2 = peg$FAILED,
        peg$c3 = "@comment",
        peg$c4 = { type: "literal", value: "@comment", description: "\"@comment\"" },
        peg$c5 = "{",
        peg$c6 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c7 = "}",
        peg$c8 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c9 = function(comment) { bibtex.comments.push(flatten(comment).trim()); },
        peg$c10 = "@string",
        peg$c11 = { type: "literal", value: "@string", description: "\"@string\"" },
        peg$c12 = function(str) { bibtex.strings[str.key] = str.value; },
        peg$c13 = "@",
        peg$c14 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c15 = void 0,
        peg$c16 = "string",
        peg$c17 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c18 = "comment",
        peg$c19 = { type: "literal", value: "comment", description: "\"comment\"" },
        peg$c20 = /^[^@]/,
        peg$c21 = { type: "class", value: "[^@]", description: "[^@]" },
        peg$c22 = function(other) { bibtex.comments.push(flatten(other).trim()); },
        peg$c23 = ",",
        peg$c24 = { type: "literal", value: ",", description: "\",\"" },
        peg$c25 = function(type, id, fields) {
              if (fields.length == 0) {
                error('@' + type + '{' + id + ',}');
              } else {
                var ref = Dict({'__type__': type.toLowerCase(), '__key__': id});
                fields.forEach(function(field) {
                  if (field.value && field.value != '') {
                    switch (field.type) {
                      case 'file':
                        var attachments;
                        if (ref['file']) {
                          attachments = ref['file'];
                        } else {
                          attachments = [];
                        }
                        ref['file'] = attachments.concat(field.value);
                        break;

                      case 'creator':
                        if (field.value.length > 0) {
                          ref[field.key] = field.value;
                        }
                        break;

                      default:
                        if (ref[field.key]) { // duplicate fields are not supposed to occur I think
                          var note;
                          if (ref['__note__']) {
                            note = ref['__note__'] + "<br/>\n";
                          } else {
                            note = '';
                          }
                          ref['__note__'] = note + field.key + '=' + field.value;
                        } else {
                          ref[field.key] = field.value;
                        }
                        break;
                    }
                  }
                });
                bibtex.references.push(ref);
              }
            },
        peg$c26 = function(err) { error('@' + flatten(err)); },
        peg$c27 = /^[a-zA-Z]/,
        peg$c28 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c29 = function(chars) { return flatten(chars); },
        peg$c30 = /^[^,]/,
        peg$c31 = { type: "class", value: "[^,]", description: "[^,]" },
        peg$c32 = function(str) { return flatten(str); },
        peg$c33 = "=",
        peg$c34 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c35 = null,
        peg$c36 = function(key, val) { return {key: 'file', type: 'file', value: filterattachments(val || [], key)}; },
        peg$c37 = function(key, val) {
              var _dbg = 'PARSING: ';
              val.forEach(function(fragment) {
                if (fragment instanceof String) {
                  _dbg += '<<' + fragment + '>>';
                } else {
                  _dbg += fragment;
                }
              });
              Zotero.debug(_dbg);
              return {key: key, type: 'creator', value: Creators.parse(val)};
            },
        peg$c38 = "sentelink",
        peg$c39 = { type: "literal", value: "sentelink", description: "\"sentelink\"" },
        peg$c40 = "file",
        peg$c41 = { type: "literal", value: "file", description: "\"file\"" },
        peg$c42 = "pdf",
        peg$c43 = { type: "literal", value: "pdf", description: "\"pdf\"" },
        peg$c44 = "path",
        peg$c45 = { type: "literal", value: "path", description: "\"path\"" },
        peg$c46 = "author",
        peg$c47 = { type: "literal", value: "author", description: "\"author\"" },
        peg$c48 = "editor",
        peg$c49 = { type: "literal", value: "editor", description: "\"editor\"" },
        peg$c50 = "translator",
        peg$c51 = { type: "literal", value: "translator", description: "\"translator\"" },
        peg$c52 = function(val) { return val; },
        peg$c53 = "\"",
        peg$c54 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c55 = function(key) { return key == 'url'},
        peg$c56 = function(key, val) { return {key: key.trim().toLowerCase(), value: val.trim()}; },
        peg$c57 = /^[^ \t\n\r=]/,
        peg$c58 = { type: "class", value: "[^ \\t\\n\\r=]", description: "[^ \\t\\n\\r=]" },
        peg$c59 = function(key) { return flatten(key); },
        peg$c60 = /^[^#"{} \t\n\r,]/,
        peg$c61 = { type: "class", value: "[^#\"{} \\t\\n\\r,]", description: "[^#\"{} \\t\\n\\r,]" },
        peg$c62 = function(val) {
              val = flatten(val);
              return (bibtex.strings[val] || val);
            },
        peg$c63 = function(val) { return flatten(val); },
        peg$c64 = "#",
        peg$c65 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c66 = function() { delete bibtex.quote; return true; },
        peg$c67 = function(val) { delete bibtex.quote; return true; },
        peg$c68 = function() { bibtex.quote = '"'; return true; },
        peg$c69 = function(text) { return text; },
        peg$c70 = "\\\\",
        peg$c71 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c72 = function() { return "\n"; },
        peg$c73 = "\\",
        peg$c74 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c75 = /^[~]/,
        peg$c76 = { type: "class", value: "[~]", description: "[~]" },
        peg$c77 = function(text) { return ' '; },
        peg$c78 = /^[#$&]/,
        peg$c79 = { type: "class", value: "[#$&]", description: "[#$&]" },
        peg$c80 = function() { return ''; },
        peg$c81 = "_",
        peg$c82 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c83 = function(text) { return '<sub>' + text + '</sub>'; },
        peg$c84 = "^",
        peg$c85 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c86 = function(text) { return '<sup>' + text + '</sup>'; },
        peg$c87 = "\\emph",
        peg$c88 = { type: "literal", value: "\\emph", description: "\"\\\\emph\"" },
        peg$c89 = function(text) { return '<i>' + text + '</i>'; },
        peg$c90 = "\\url{",
        peg$c91 = { type: "literal", value: "\\url{", description: "\"\\\\url{\"" },
        peg$c92 = function(text) { return flatten(text); },
        peg$c93 = "\\textit",
        peg$c94 = { type: "literal", value: "\\textit", description: "\"\\\\textit\"" },
        peg$c95 = "\\textbf",
        peg$c96 = { type: "literal", value: "\\textbf", description: "\"\\\\textbf\"" },
        peg$c97 = function(text) { return '<b>' + text + '</b>'; },
        peg$c98 = "\\textsc",
        peg$c99 = { type: "literal", value: "\\textsc", description: "\"\\\\textsc\"" },
        peg$c100 = function(text) { return '<span style="small-caps">' + text + '</span>'; },
        peg$c101 = function(text) { return new String(flatten(text)); },
        peg$c102 = "$",
        peg$c103 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c104 = "%",
        peg$c105 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c106 = /^[^\n]/,
        peg$c107 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c108 = "\n",
        peg$c109 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c110 = /^[^a-z]/,
        peg$c111 = { type: "class", value: "[^a-z]", description: "[^a-z]" },
        peg$c112 = "[",
        peg$c113 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c114 = "]",
        peg$c115 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c116 = function(cmd, param) {  /* single-char command */
                                                                  var cmds = ["\\" + cmd + param];
                                                                  if (param.length == 1) { cmds.push("\\" + cmd + '{' + param + '}'); }
                                                                  if (param.length == 3 && param[0] == '{' && param[2] == '}') { cmds.push("\\" + cmd + param[2] ); }
                                                                  var match = null;
                                                                  cmds.forEach(function(cmd) {
                                                                    match = match || LaTeX.toUnicode[cmd];
                                                                  });
                                                                  return (match || param);
                                                               },
        peg$c117 = function(cmd) {  /* single-char command without parameter*/
                                                                  if (LaTeX.toUnicode["\\" + cmd]) { return LaTeX.toUnicode["\\" + cmd]; }
                                                                  return cmd;
                                                               },
        peg$c118 = function(cmd, text) { /* command */
                                                                            return ((LaTeX.toUnicode["\\" + cmd] || '') + flatten(text));
                                                                          },
        peg$c119 = function(cmd) {  /* bare command */
                                                                  if (LaTeX.toUnicode["\\" + cmd]) { return LaTeX.toUnicode["\\" + cmd]; }
                                                                  return cmd;
                                                               },
        peg$c120 = /^[^\\{]/,
        peg$c121 = { type: "class", value: "[^\\\\{]", description: "[^\\\\{]" },
        peg$c122 = { type: "any", description: "any character" },
        peg$c123 = function() { return (bibtex.quote == '"');  },
        peg$c124 = function() { return '"'; },
        peg$c125 = /^[#$%&_\^[\]{}]/,
        peg$c126 = { type: "class", value: "[#$%&_\\^[\\]{}]", description: "[#$%&_\\^[\\]{}]" },
        peg$c127 = /^[^\\{}]/,
        peg$c128 = { type: "class", value: "[^\\\\{}]", description: "[^\\\\{}]" },
        peg$c129 = function() { return (bibtex.quote == '"'); },
        peg$c130 = /^[^ "\t\n\r#$%&~_\^{}[\]\\]/,
        peg$c131 = { type: "class", value: "[^ \"\\t\\n\\r#$%&~_\\^{}[\\]\\\\]", description: "[^ \"\\t\\n\\r#$%&~_\\^{}[\\]\\\\]" },
        peg$c132 = function() { return (bibtex.quote != '"'); },
        peg$c133 = /^[^ \t\n\r#$%&~_\^{}[\]\\]/,
        peg$c134 = { type: "class", value: "[^ \\t\\n\\r#$%&~_\\^{}[\\]\\\\]", description: "[^ \\t\\n\\r#$%&~_\\^{}[\\]\\\\]" },
        peg$c135 = /^[ \t\n\r]/,
        peg$c136 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c137 = function(car, cdr) { return [car].concat(cdr || []); },
        peg$c138 = ";",
        peg$c139 = { type: "literal", value: ";", description: "\";\"" },
        peg$c140 = function(att) { return att; },
        peg$c141 = function(parts) {
                                parts = parts || [];
                                parts = (parts || []).map(function(v) { return v.trim(); });
                                switch (parts.length) {
                                  case 0:
                                    return {};
                                  case 1:
                                    parts = {title: '', path: parts[0], mimeType: ''};
                                    break;
                                  case 2:
                                    parts = {title: parts[0], path: parts[1], mimeType: ''};
                                    break;
                                  default:
                                    parts = {title: parts[0], path: parts[1], mimeType: parts[2]};
                                    break;
                                }

                                parts.title = ((parts.title && parts.title != '') ? parts.title : 'Attachment');
                                parts.mimeType = ((parts.mimeType && parts.mimeType.match(/pdf/i)) ? 'application/pdf' : null);

                                parts.path = parts.path.replace(/\\/g, '/');
                                if (parts.path.match(/^[a-z]:\//i)) { parts.path = 'file:///' + parts.path; }
                                if (parts.path.match(/^\/\//)) { parts.path = 'file:' + parts.path; }

                                return parts;
                            },
        peg$c142 = ":",
        peg$c143 = { type: "literal", value: ":", description: "\":\"" },
        peg$c144 = function(part) { return part; },
        peg$c145 = function(part) { return (part || ''); },
        peg$c146 = /^[^\\{}:;]/,
        peg$c147 = { type: "class", value: "[^\\\\{}:;]", description: "[^\\\\{}:;]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseentry();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseentry();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseentry() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 8) === peg$c3) {
          s2 = peg$c3;
          peg$currPos += 8;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s4 = peg$c5;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsestring();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parsestring();
              }
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 125) {
                  s6 = peg$c7;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c9(s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c2;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c2;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c2;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
          if (input.substr(peg$currPos, 7) === peg$c10) {
            s2 = peg$c10;
            peg$currPos += 7;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s2 !== peg$FAILED) {
            s3 = [];
            s4 = peg$parse_();
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parse_();
            }
            if (s3 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 123) {
                s4 = peg$c5;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
              if (s4 !== peg$FAILED) {
                s5 = [];
                s6 = peg$parse_();
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parse_();
                }
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsekey_value();
                  if (s6 !== peg$FAILED) {
                    s7 = [];
                    s8 = peg$parse_();
                    while (s8 !== peg$FAILED) {
                      s7.push(s8);
                      s8 = peg$parse_();
                    }
                    if (s7 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s8 = peg$c7;
                        peg$currPos++;
                      } else {
                        s8 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c8); }
                      }
                      if (s8 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c12(s6);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c2;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c2;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c2;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c2;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c2;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$parse_();
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse_();
          }
          if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 64) {
              s2 = peg$c13;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c14); }
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$currPos;
              peg$silentFails++;
              if (input.substr(peg$currPos, 6) === peg$c16) {
                s4 = peg$c16;
                peg$currPos += 6;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c17); }
              }
              if (s4 === peg$FAILED) {
                if (input.substr(peg$currPos, 7) === peg$c18) {
                  s4 = peg$c18;
                  peg$currPos += 7;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c19); }
                }
              }
              peg$silentFails--;
              if (s4 === peg$FAILED) {
                s3 = peg$c15;
              } else {
                peg$currPos = s3;
                s3 = peg$c2;
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parsereference();
                if (s4 !== peg$FAILED) {
                  s1 = [s1, s2, s3, s4];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c2;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c2;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            if (peg$c20.test(input.charAt(peg$currPos))) {
              s2 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c21); }
            }
            if (s2 !== peg$FAILED) {
              while (s2 !== peg$FAILED) {
                s1.push(s2);
                if (peg$c20.test(input.charAt(peg$currPos))) {
                  s2 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c21); }
                }
              }
            } else {
              s1 = peg$c2;
            }
            if (s1 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c22(s1);
            }
            s0 = s1;
          }
        }
      }

      return s0;
    }

    function peg$parsereference() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
